src/LAParser.py
# Generated from LA.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class LAParser ( Parser ):

    grammarFileName = "LA.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'algoritmo'", "'fim_algoritmo'", "'declare'", 
                     "'constante'", "'='", "'tipo'", "','", "'.'", "'['", 
                     "']'", "'literal'", "'inteiro'", "'real'", "'logico'", 
                     "'^'", "'verdadeiro'", "'falso'", "'registro'", "'fim_registro'", 
                     "'procedimento'", "'('", "')'", "'fim_procedimento'", 
                     "'funcao'", "'fim_funcao'", "'var'", "'leia'", "'escreva'", 
                     "'se'", "'entao'", "'senao'", "'fim_se'", "'caso'", 
                     "'seja'", "'fim_caso'", "'para'", "'ate'", "'faca'", 
                     "'fim_para'", "'enquanto'", "'fim_enquanto'", "'retorne'", 
                     "'..'", "'-'", "'+'", "'*'", "'/'", "'%'", "'&'", "'<>'", 
                     "'>='", "'<='", "'>'", "'<'", "'nao'", "'ou'", "'e'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "':'", "'<-'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "COMENTARIO", "WS", "PALAVRA_RESERVADA", 
                      "OP_UNARIO", "OP_ARIT", "OP_RELACIONAL", "OP_LOGICO", 
                      "OUTRO_OP", "DECLARADOR", "ATRIBUIDOR", "DELIMITADOR", 
                      "IDENT", "NUM_INT", "NUM_REAL", "CADEIA" ]

    RULE_programa = 0
    RULE_declaracoes = 1
    RULE_decl_local_global = 2
    RULE_declaracao_local = 3
    RULE_variavel = 4
    RULE_identificador = 5
    RULE_dimensao = 6
    RULE_tipo = 7
    RULE_tipo_basico = 8
    RULE_tipo_basico_ident = 9
    RULE_tipo_estendido = 10
    RULE_valor_constante = 11
    RULE_registro = 12
    RULE_declaracao_global = 13
    RULE_parametro = 14
    RULE_parametros = 15
    RULE_corpo = 16
    RULE_cmd = 17
    RULE_cmdleia = 18
    RULE_cmdescreva = 19
    RULE_cmdse = 20
    RULE_cmdcaso = 21
    RULE_cmdpara = 22
    RULE_cmdenquanto = 23
    RULE_cmdfaca = 24
    RULE_cmdatribuicao = 25
    RULE_cmdchamada = 26
    RULE_cmdretorne = 27
    RULE_selecao = 28
    RULE_item_selecao = 29
    RULE_constantes = 30
    RULE_numero_intervalo = 31
    RULE_op_unario = 32
    RULE_exp_aritmetica = 33
    RULE_termo = 34
    RULE_fator = 35
    RULE_op1 = 36
    RULE_op2 = 37
    RULE_op3 = 38
    RULE_parcela = 39
    RULE_parcela_unario = 40
    RULE_parcela_nao_unario = 41
    RULE_exp_relacional = 42
    RULE_op_relacional = 43
    RULE_expressao = 44
    RULE_termo_logico = 45
    RULE_fator_logico = 46
    RULE_parcela_logica = 47
    RULE_op_logico_1 = 48
    RULE_op_logico_2 = 49

    ruleNames =  [ "programa", "declaracoes", "decl_local_global", "declaracao_local", 
                   "variavel", "identificador", "dimensao", "tipo", "tipo_basico", 
                   "tipo_basico_ident", "tipo_estendido", "valor_constante", 
                   "registro", "declaracao_global", "parametro", "parametros", 
                   "corpo", "cmd", "cmdleia", "cmdescreva", "cmdse", "cmdcaso", 
                   "cmdpara", "cmdenquanto", "cmdfaca", "cmdatribuicao", 
                   "cmdchamada", "cmdretorne", "selecao", "item_selecao", 
                   "constantes", "numero_intervalo", "op_unario", "exp_aritmetica", 
                   "termo", "fator", "op1", "op2", "op3", "parcela", "parcela_unario", 
                   "parcela_nao_unario", "exp_relacional", "op_relacional", 
                   "expressao", "termo_logico", "fator_logico", "parcela_logica", 
                   "op_logico_1", "op_logico_2" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    COMENTARIO=58
    WS=59
    PALAVRA_RESERVADA=60
    OP_UNARIO=61
    OP_ARIT=62
    OP_RELACIONAL=63
    OP_LOGICO=64
    OUTRO_OP=65
    DECLARADOR=66
    ATRIBUIDOR=67
    DELIMITADOR=68
    IDENT=69
    NUM_INT=70
    NUM_REAL=71
    CADEIA=72

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracoes(self):
            return self.getTypedRuleContext(LAParser.DeclaracoesContext,0)


        def corpo(self):
            return self.getTypedRuleContext(LAParser.CorpoContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = LAParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.declaracoes()
            self.state = 101
            self.match(LAParser.T__0)
            self.state = 102
            self.corpo()
            self.state = 103
            self.match(LAParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracoesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_local_global(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParser.Decl_local_globalContext)
            else:
                return self.getTypedRuleContext(LAParser.Decl_local_globalContext,i)


        def getRuleIndex(self):
            return LAParser.RULE_declaracoes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracoes" ):
                listener.enterDeclaracoes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracoes" ):
                listener.exitDeclaracoes(self)




    def declaracoes(self):

        localctx = LAParser.DeclaracoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracoes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LAParser.T__2) | (1 << LAParser.T__3) | (1 << LAParser.T__5) | (1 << LAParser.T__19) | (1 << LAParser.T__23))) != 0):
                self.state = 105
                self.decl_local_global()
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_local_globalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao_local(self):
            return self.getTypedRuleContext(LAParser.Declaracao_localContext,0)


        def declaracao_global(self):
            return self.getTypedRuleContext(LAParser.Declaracao_globalContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_decl_local_global

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl_local_global" ):
                listener.enterDecl_local_global(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl_local_global" ):
                listener.exitDecl_local_global(self)




    def decl_local_global(self):

        localctx = LAParser.Decl_local_globalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl_local_global)
        try:
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LAParser.T__2, LAParser.T__3, LAParser.T__5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.declaracao_local()
                pass
            elif token in [LAParser.T__19, LAParser.T__23]:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.declaracao_global()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_localContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variavel(self):
            return self.getTypedRuleContext(LAParser.VariavelContext,0)


        def IDENT(self):
            return self.getToken(LAParser.IDENT, 0)

        def DECLARADOR(self):
            return self.getToken(LAParser.DECLARADOR, 0)

        def tipo_basico(self):
            return self.getTypedRuleContext(LAParser.Tipo_basicoContext,0)


        def valor_constante(self):
            return self.getTypedRuleContext(LAParser.Valor_constanteContext,0)


        def tipo(self):
            return self.getTypedRuleContext(LAParser.TipoContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_declaracao_local

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_local" ):
                listener.enterDeclaracao_local(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_local" ):
                listener.exitDeclaracao_local(self)




    def declaracao_local(self):

        localctx = LAParser.Declaracao_localContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracao_local)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LAParser.T__2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.match(LAParser.T__2)
                self.state = 116
                self.variavel()
                pass
            elif token in [LAParser.T__3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.match(LAParser.T__3)
                self.state = 118
                self.match(LAParser.IDENT)
                self.state = 119
                self.match(LAParser.DECLARADOR)
                self.state = 120
                self.tipo_basico()
                self.state = 121
                self.match(LAParser.T__4)
                self.state = 122
                self.valor_constante()
                pass
            elif token in [LAParser.T__5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 124
                self.match(LAParser.T__5)
                self.state = 125
                self.match(LAParser.IDENT)
                self.state = 126
                self.match(LAParser.DECLARADOR)
                self.state = 127
                self.tipo()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariavelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificador(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParser.IdentificadorContext)
            else:
                return self.getTypedRuleContext(LAParser.IdentificadorContext,i)


        def DECLARADOR(self):
            return self.getToken(LAParser.DECLARADOR, 0)

        def tipo(self):
            return self.getTypedRuleContext(LAParser.TipoContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_variavel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariavel" ):
                listener.enterVariavel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariavel" ):
                listener.exitVariavel(self)




    def variavel(self):

        localctx = LAParser.VariavelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variavel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.identificador()
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LAParser.T__6:
                self.state = 131
                self.match(LAParser.T__6)
                self.state = 132
                self.identificador()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 138
            self.match(LAParser.DECLARADOR)
            self.state = 139
            self.tipo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentificadorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(LAParser.IDENT)
            else:
                return self.getToken(LAParser.IDENT, i)

        def dimensao(self):
            return self.getTypedRuleContext(LAParser.DimensaoContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_identificador

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentificador" ):
                listener.enterIdentificador(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentificador" ):
                listener.exitIdentificador(self)




    def identificador(self):

        localctx = LAParser.IdentificadorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_identificador)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(LAParser.IDENT)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LAParser.T__7:
                self.state = 142
                self.match(LAParser.T__7)
                self.state = 143
                self.match(LAParser.IDENT)
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 149
            self.dimensao()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_aritmetica(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParser.Exp_aritmeticaContext)
            else:
                return self.getTypedRuleContext(LAParser.Exp_aritmeticaContext,i)


        def getRuleIndex(self):
            return LAParser.RULE_dimensao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDimensao" ):
                listener.enterDimensao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDimensao" ):
                listener.exitDimensao(self)




    def dimensao(self):

        localctx = LAParser.DimensaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dimensao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LAParser.T__8:
                self.state = 151
                self.match(LAParser.T__8)
                self.state = 152
                self.exp_aritmetica()
                self.state = 153
                self.match(LAParser.T__9)
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def registro(self):
            return self.getTypedRuleContext(LAParser.RegistroContext,0)


        def tipo_estendido(self):
            return self.getTypedRuleContext(LAParser.Tipo_estendidoContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)




    def tipo(self):

        localctx = LAParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_tipo)
        try:
            self.state = 162
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LAParser.T__17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.registro()
                pass
            elif token in [LAParser.T__10, LAParser.T__11, LAParser.T__12, LAParser.T__13, LAParser.T__14, LAParser.IDENT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.tipo_estendido()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tipo_basicoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LAParser.RULE_tipo_basico

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo_basico" ):
                listener.enterTipo_basico(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo_basico" ):
                listener.exitTipo_basico(self)




    def tipo_basico(self):

        localctx = LAParser.Tipo_basicoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_tipo_basico)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LAParser.T__10) | (1 << LAParser.T__11) | (1 << LAParser.T__12) | (1 << LAParser.T__13))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tipo_basico_identContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo_basico(self):
            return self.getTypedRuleContext(LAParser.Tipo_basicoContext,0)


        def IDENT(self):
            return self.getToken(LAParser.IDENT, 0)

        def getRuleIndex(self):
            return LAParser.RULE_tipo_basico_ident

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo_basico_ident" ):
                listener.enterTipo_basico_ident(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo_basico_ident" ):
                listener.exitTipo_basico_ident(self)




    def tipo_basico_ident(self):

        localctx = LAParser.Tipo_basico_identContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_tipo_basico_ident)
        try:
            self.state = 168
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LAParser.T__10, LAParser.T__11, LAParser.T__12, LAParser.T__13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.tipo_basico()
                pass
            elif token in [LAParser.IDENT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 167
                self.match(LAParser.IDENT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tipo_estendidoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo_basico_ident(self):
            return self.getTypedRuleContext(LAParser.Tipo_basico_identContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_tipo_estendido

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo_estendido" ):
                listener.enterTipo_estendido(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo_estendido" ):
                listener.exitTipo_estendido(self)




    def tipo_estendido(self):

        localctx = LAParser.Tipo_estendidoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_tipo_estendido)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LAParser.T__14:
                self.state = 170
                self.match(LAParser.T__14)


            self.state = 173
            self.tipo_basico_ident()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Valor_constanteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CADEIA(self):
            return self.getToken(LAParser.CADEIA, 0)

        def NUM_INT(self):
            return self.getToken(LAParser.NUM_INT, 0)

        def NUM_REAL(self):
            return self.getToken(LAParser.NUM_REAL, 0)

        def getRuleIndex(self):
            return LAParser.RULE_valor_constante

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValor_constante" ):
                listener.enterValor_constante(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValor_constante" ):
                listener.exitValor_constante(self)




    def valor_constante(self):

        localctx = LAParser.Valor_constanteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_valor_constante)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            _la = self._input.LA(1)
            if not(((((_la - 16)) & ~0x3f) == 0 and ((1 << (_la - 16)) & ((1 << (LAParser.T__15 - 16)) | (1 << (LAParser.T__16 - 16)) | (1 << (LAParser.NUM_INT - 16)) | (1 << (LAParser.NUM_REAL - 16)) | (1 << (LAParser.CADEIA - 16)))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RegistroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variavel(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParser.VariavelContext)
            else:
                return self.getTypedRuleContext(LAParser.VariavelContext,i)


        def getRuleIndex(self):
            return LAParser.RULE_registro

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegistro" ):
                listener.enterRegistro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegistro" ):
                listener.exitRegistro(self)




    def registro(self):

        localctx = LAParser.RegistroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_registro)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.match(LAParser.T__17)
            self.state = 181
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LAParser.IDENT:
                self.state = 178
                self.variavel()
                self.state = 183
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 184
            self.match(LAParser.T__18)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_globalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(LAParser.IDENT, 0)
